# unitree_go1_hardware_interface

./: .gitignore  .gitmodules  README.md
autonomous_navigation/: README.md  ros2_integration.md  system_setup.md  web_portal_integration.md
catkin_ws/devel/: .catkin
catkin_ws/src/unitree_legged_sdk/example_py/: example_walk.py
hand_gesture/: README.md
hand_gesture/catkin_ws/src/unitree_legged_sdk/example/: example_walk.cpp
hand_gesture/catkin_ws/src/unitree_legged_sdk/example_py/: app.py  mic_vad_streaming.py  text.py
k1_arm/perception_stack/: README.md  docker-compose.yml
k1_arm/perception_stack/realsense-ros/realsense2_camera/launch/: rs_camera.launch
k1_arm/perception_stack/sagittarius_control/: CMakeLists.txt  package.xml
k1_arm/perception_stack/sagittarius_control/config/: color_config.yaml  pre_pick_pose.yaml
k1_arm/perception_stack/sagittarius_control/launch/: auto_pick_pipeline.launch  detect_objects.launch  mirror_real_arm.launch  startup_with_prepose.launch
k1_arm/perception_stack/sagittarius_control/nodes/: move_to_object.py  move_to_pose.py  multi_color_object_detector.py  send_pre_pick_pose.py
k1_arm/perception_stack/sagittarius_control/src/: rviz_joint_mirror_node.cpp
k1_arm/perception_stack/sagittarius_descriptions/launch/: gazebo.launch
k1_arm/perception_stack/sagittarius_descriptions/urdf/: sagittarius_descriptions.urdf  sgr532.urdf.xacro  spark_sgr_external.urdf.xacro
k1_arm/perception_stack/sagittarius_moveit/config/: sgr532.srdf.xacro
k1_arm/perception_stack/sagittarius_moveit/launch/: sgr532_moveit_in_spark.launch  spark_sgr532.rviz
k1_arm/perception_stack/sdk_sagittarius_arm/: CMakeLists.txt  package.xml
k1_arm/perception_stack/sdk_sagittarius_arm/launch/: rviz_control_sagittarius.launch
k1_arm/ros_package/: README.md
k1_arm/ros_package/catkin_ws/src/sagittarius_control/: CMakeLists.txt  package.xml
k1_arm/ros_package/catkin_ws/src/sagittarius_control/launch/: arm_control.launch
k1_arm/ros_package/catkin_ws/src/sagittarius_control/src/: arm_controller.cpp  gripper_controller.cpp
k1_arm/sdk_control/: README.md
k1_arm/sdk_control/src/: arm_control.cpp  arm_ws.cpp
