<?xml version="1.0"?>
<package format="2">
  <name>sagittarius_control</name>
  <version>0.0.0</version>
  <description>The sagittarius_control package</description>
  <maintainer email="syed.ahussain@ku.ac.ae">root</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- SDK and external packages -->
  <build_depend>sdk_sagittarius_arm</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>realsense2_camera</build_depend>

  <!-- Exported build dependencies -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>sdk_sagittarius_arm</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sdk_sagittarius_arm</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
